Fix jump

--- a/src/ConfigStore.WebApp/src/app/workbench/components/workbench.component.scss
+++ b/src/ConfigStore.WebApp/src/app/workbench/components/workbench.component.scss
@@ -58,6 +58,10 @@
     
             mat-form-field {
                 width: 100%;
+
+                .mat-form-field-infix {
+                    border-top-width: 1.1rem;
+                }
             }
         }
     }
